crates/datarig-tui/tests/snapshots/ui_snapshots__help_editor_normal_top_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│ ╭ Keys — Editor (vim Normal) ──────────────────────────────────────────────╮─╮"
"│▾│ / search all keys · Esc close                                            │t│"
"│ │──────────────────────────────────────────────────────────────────────────│e│"
"│ │ ▾ Editor (vim Normal)                                                    │ │"
"│ │   Start typing (Insert mode)              i                              │ │"
"│ │   Stop typing, back to the vim keys (Nor… Esc                            │ │"
"│ │ ▾ Panes (not typing)                                                     │ │"
"│ │   Focus next pane                         Tab                            │ │"
"│ │   Commands                                : / Space /                    │ │"
"│ │   Next tab                                g t                            │ │"
"│ │   Previous tab                            g T                            │ │"
"│ │   New console tab                         Space t n                      │ │"
"│ │   Close tab                               Space t c                      │t│"
"│ │   Reopen closed tab                       Space t u                      │ │"
"│ │   Go to tab 1                             Space 1                        │ │"
"│ │   Go to tab 2                             Space 2                        │ │"
"│ │   Go to tab 3                             Space 3                        │t│"
"│ │   Go to tab 4                             Space 4                        │ │"
"│ │   Go to tab 5                             Space 5                        │ │"
"│ │   Go to tab 6                             Space 6                        │ │"
"│ ╰─────────────────── ↑↓ move · Enter run/open · l/h open/close · Esc close ╯ │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                  EN "
