crates/datarig-tui/tests/snapshots/ui_snapshots__help_explorer_en_160x45.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ×                                                                                                          "
"│  ＋ New connection          ╭ Keys — Explorer ─────────────────────────────────────────────────────────────────────────────────╮─────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg               │ / search all keys · Esc close                                                                    │ Space c s switch connection │"
"│  ▾ datarig default          │──────────────────────────────────────────────────────────────────────────────────────────────────│                             │"
"│    ▸ analytics              │ ▾ Explorer                                                                                       │                             │"
"│    ▸ public                 │   Explorer: next item                                             j / Down                       │                             │"
"│    ▸ shop                   │   Explorer: previous item                                         k / Up                         │                             │"
"│                             │   Explorer: expand                                                l / Right                      │                             │"
"│                             │   Explorer: collapse or go to parent                              h / Left                       │                             │"
"│                             │   Explorer: open or toggle                                        Enter                          │                             │"
"│                             │   Explorer: first item                                            g g                            │                             │"
"│                             │   Explorer: last item                                             G                              │                             │"
"│                             │   Explorer: reload                                                r                              │                             │"
"│                             │   Explorer: filter profiles                                       /                              │                             │"
"│                             │   New connection profile                                          n                              │                             │"
"│                             │   Edit connection profile                                         e                              │                             │"
"│                             │   Duplicate connection profile                                    c                              │                             │"
"│                             │   Explorer: delete profile or empty folder                        d                              │                             │"
"│                             │   Test connection                                                 t                              │                             │"
"│                             │   Disconnect                                                      x                              │                             │"
"│                             │   New console on this connection                                  o                              │                             │"
"│                             │   Explorer: move profile to a folder                              m                              │                             │"
"│                             │   New folder                                                      N                              │                             │"
"│                             │   Explorer: rename folder                                         R                              │                             │"
"│                             │   Explorer: new console in this database or schema                O                              │                             │"
"│                             │   Explorer: show the DDL of the table, view, index or trigger     D                              │                             │"
"│                             │   Explorer: show the DDL of the trigger's function                F                              │                             │"
"│                             │   Explorer: back (cancel a test or connecting, clear the filter)  Esc                            │                             │"
"│                             │   Quit                                                            q                              │                             │"
"│                             │ ▾ Panes (not typing)                                                                             │                             │"
"│                             │   Focus next pane                                                 Tab                            │                             │"
"│                             │   Commands                                                        : / Space /                    │                             │"
"│                             │   Next tab                                                        g t                            │                             │"
"│                             │   Previous tab                                                    g T                            │                             │"
"│                             │   New console tab                                                 Space t n                      │                             │"
"│                             │   Close tab                                                       Space t c                      │                             │"
"│                             │   Reopen closed tab                                               Space t u                      │                             │"
"│                             │   Go to tab 1                                                     Space 1                        │                             │"
"│                             │   Go to tab 2                                                     Space 2                        │                             │"
"│                             │   Go to tab 3                                                     Space 3                        │                             │"
"│                             │   Go to tab 4                                                     Space 4                        │                             │"
"│                             │   Go to tab 5                                                     Space 5                        │                             │"
"│                             ╰─────────────────────────────────────────── ↑↓ move · Enter run/open · l/h open/close · Esc close ╯                             │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                                                                                                  EN "
