crates/datarig-tui/tests/snapshots/ui_snapshots__help_explorer_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│ ╭ Keys — Explorer ─────────────────────────────────────────────────────────╮─╮"
"│▾│ / search all keys · Esc close                                            │t│"
"│ │──────────────────────────────────────────────────────────────────────────│e│"
"│ │ ▾ Explorer                                                               │ │"
"│ │   Explorer: next item                     j / Down                       │ │"
"│ │   Explorer: previous item                 k / Up                         │ │"
"│ │   Explorer: expand                        l / Right                      │ │"
"│ │   Explorer: collapse or go to parent      h / Left                       │ │"
"│ │   Explorer: open or toggle                Enter                          │ │"
"│ │   Explorer: first item                    g g                            │ │"
"│ │   Explorer: last item                     G                              │ │"
"│ │   Explorer: reload                        r                              │ │"
"│ │   Explorer: filter profiles               /                              │t│"
"│ │   New connection profile                  n                              │ │"
"│ │   Edit connection profile                 e                              │ │"
"│ │   Duplicate connection profile            c                              │ │"
"│ │   Explorer: delete profile or empty fold… d                              │t│"
"│ │   Test connection                         t                              │ │"
"│ │   Disconnect                              x                              │ │"
"│ │   New console on this connection          o                              │ │"
"│ ╰─────────────────── ↑↓ move · Enter run/open · l/h open/close · Esc close ╯ │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                  EN "
