crates/datarig-tui/tests/snapshots/ui_snapshots__help_search_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: "h.draw(80, 24).backend()"
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│ ╭ Keys — Editor (vim Normal) ──────────────────────────────────────────────╮─╮"
"│▾│ / results                                                                │t│"
"│ │──────────────────────────────────────────────────────────────────────────│e│"
"│ │ ▾ Panes (not typing)                                                     │ │"
"│ │   Format the statement under the cursor or the sele… Space e f           │ │"
"│ │   View as plan: the text EXPLAIN again as JSON       Space e p           │ │"
"│ │   Copy selection: Without headers (TSV)              Space r y t         │ │"
"│ │   Copy selection: With headers (TSV)                 Space r y T         │ │"
"│ │   Copy selection: Comma list                         Space r y l         │ │"
"│ │   Copy selection: CSV                                Space r y c         │ │"
"│ │   Copy selection: JSON                               Space r y j         │ │"
"│ │   Copy selection: JSON (pretty)                      Space r y J         │ │"
"│ │   Copy selection: Markdown                           Space r y m         │t│"
"│ │   Copy selection: HTML table                         Space r y h         │ │"
"│ │   Copy selection: XML                                Space r y x         │ │"
"│ │   Copy selection: SQL IN clause                      Space r y n         │ │"
"│ │   Copy selection: SQL INSERT                         Space r y i         │t│"
"│ │   Copy selection: SQL UPDATE                         Space r y u         │ │"
"│ │   Copy all fetched rows: Without headers (TSV)       Space r a t         │ │"
"│ │   Copy all fetched rows: With headers (TSV)          Space r a T         │ │"
"│ ╰─────────────────── ↑↓ move · Enter run/open · l/h open/close · Esc close ╯ │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                  EN "
