crates/datarig-tui/tests/snapshots/ui_snapshots__idle_paging_closed_en_160x45.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ● ×                                                                                                        "
"│  ＋ New connection                   │╭ Query · console 1 ───────────────────────────────────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg                        ││ local-pg / datarig  127.0.0.1:55432 · policy: default                                    Space c s switch connection │"
"│  ▾ datarig default                   ││  1 -- datarig 🐘  Ctrl+E: run the statement under the cursor                                                         │" Hidden by multi-width symbols: [(57, " ")]
"│    ▸ analytics                       ││  2▎SELECT * FROM shop.users WHERE id <= 8;                                                                           │"
"│    ▸ public                          ││  3                                                                                                                   │"
"│    ▸ shop                            ││  4 SELECT u.name, o.status, o.total_amount                                                                           │"
"│                                      ││  5 FROM shop.orders o                                                                                                │"
"│                                      ││  6 JOIN shop.users u ON u.id = o.user_id                                                                             │"
"│                                      ││  7 WHERE o.status = 'paid';                                                                                          │"
"│                                      ││  8                                                                                                                   │"
"│                                      ││  9 SELECT * FROM analytics.events;                                                                                   │"
"│                                      ││ 10                                                                                                                   │"
"│                                      ││ 11 SELECT * FROM analytics.events ORDER BY created_at DESC;                                                          │"
"│                                      ││ 12                                                                                                                   │"
"│                                      ││ 13 SELECT analytics.slow(30);                                                                                        │"
"│                                      ││ 14                                                                                                                   │"
"│                                      │╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"│                                      │╭ Results · rows 1–500 ────────────── ‹ (page 1 / ? · paging closed) › ╮╭ [Cell] Row · I ──────────────────────────────╮"
"│                                      ││    │ id                                                              ││ id                                           │"
"│                                      ││    │ int8                                                            ││ int8 · 1 character                           │"
"│                                      ││  1 │    0                                                            ││                                              │"
"│                                      ││  2 │    1                                                            ││ 0                                            │"
"│                                      ││  3 │    2                                                            ││                                              │"
"│                                      ││  4 │    3                                                            ││                                              │"
"│                                      ││  5 │    4                                                            ││                                              │"
"│                                      ││  6 │    5                                                            ││                                              │"
"│                                      ││  7 │    6                                                            ││                                              │"
"│                                      ││  8 │    7                                                            ││                                              │"
"│                                      ││  9 │    8                                                            ││                                              │"
"│                                      ││ 10 │    9                                                            ││                                              │"
"│                                      ││ 11 │   10                                                            ││                                              │"
"│                                      ││ 12 │   11                                                            ││                                              │"
"│                                      ││ 13 │   12                                                            ││                                              │"
"│                                      ││ 14 │   13                                                            ││                                              │"
"│                                      ││ 15 │   14                                                            ││                                              │"
"│                                      ││ 16 │   15                                                            ││                                              │"
"│                                      ││ 17 │   16                                                            ││                                              │"
"│                                      ││ 18 │   17                                                            ││                                              │"
"│                                      ││ 19 │   18                                                            ││                                              │"
"│                                      ││ 20 │   19                                                            ││                                              │"
"│                                      ││ 21 │   20                                                            ││                                              │"
"│                                      ││ Showing 500 rows · paging closed — n runs the SELECT again for the n…││                                              │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Showing 500 rows · paging closed — n runs the SELECT again for the next page     │ i type · Ctrl+E run · Tab next pane EN "
