crates/datarig-tui/tests/snapshots/ui_snapshots__idle_paging_open_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg        ││ local-pg / datarig  127.0.0.1:55432 · policy: default│"
"│  ▾ datarig default   ││  1 -- datarig 🐘  Ctrl+E: run the statement under the│" Hidden by multi-width symbols: [(41, " ")]
"│    ▸ analytics       ││  2▎SELECT * FROM shop.users WHERE id <= 8;           │"
"│    ▸ public          ││  3                                                   │"
"│    ▸ shop            ││  4 SELECT u.name, o.status, o.total_amount           │"
"│                      ││  5 FROM shop.orders o                                │"
"│                      ││  6 JOIN shop.users u ON u.id = o.user_id             │"
"│                      │╰──────────────────────────────────────────────────────╯"
"│                      │╭ Results ·… ─ ‹ (1/? · 23s) › ╮╭ [Cell] Row · I ──────╮"
"│                      ││    │ id                      ││ id                   │"
"│                      ││    │ int8                    ││ int8 · 1 character   │"
"│                      ││  1 │    0                    ││                      │"
"│                      ││  2 │    1                    ││ 0                    │"
"│                      ││  3 │    2                    ││                      │"
"│                      ││  4 │    3                    ││                      │"
"│                      ││  5 │    4                    ││                      │"
"│                      ││  6 │    5                    ││                      │"
"│                      ││  7 │    6                    ││                      │"
"│                      ││  8 │    7                    ││                      │"
"│                      ││  9 │    8                    ││                      │"
"╰──────────────────────╯╰──────────────────────────────╯╰──────────────────────╯"
" NORMAL  local-pg · policy: default │ 500+ rows (more pages) · 5ms  │ i type EN "
